<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Km Control</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date">Data</string>
    <string name="hodometro_total">Hodômetro Total</string>
    <string name="hodometro_parcial">Hodômetro Parcial</string>
    <string name="valor">Valor</string>
    <string name="consumption">Consumo</string>
    <string name="litros">Litros</string>
    
    
    
    <!-- Activity Veiculo -->
    <string name="veiculo_nome">Nome</string>
    <string name="veiculo_marca">Marca</string>
    <string name="veiculo_modelo">Modelo</string>
    <string name="veiculo_placa">Placa</string>
    
    <!-- Activity Abastecimento -->
    <string name="abs_data">Data</string>
    <string name="abs_km_total">Km Total</string>
    <string name="abs_valor">Valor</string>
    <string name="abs_litros">Litros</string>
    <string name="abs_km_parcial">Litros</string>
    <string name="abs_media">Litros</string>
    
    

    <!-- Toast strings -->
    <string name="toast_list_loaded">List loaded!</string>
    <string name="toast_item_added">Item added!</string>
    <string name="toast_item_removed">Item removed!</string>
    <string name="toast_item_updated">Item updated!</string>
    <string name="toast_missed_fill_fields">Fill all data correctly!</string>
  
    <!-- Menu strings -->
    <string name="menu_add_vehicle">Menu Add Vehicle</string>
    <string name="menu_add_abastecimento">Menu Add Abastecimento</string>

</resources>